--- a/web-client/package.json
+++ b/web-client/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
     "next-redux-wrapper": "^8.1.0",
