--- a/web-server/package.json
+++ b/web-server/package.json
@@ -30,11 +30,14 @@
     "@nestjs/common": "^8.4.7",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
+    "@prisma/client": "^5.8.1",
     "@types/passport-jwt": "^4.0.0",
+    "dayjs": "^1.11.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
