--- a/web-client/package.json
+++ b/web-client/package.json
@@ -21,10 +21,13 @@
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "next": "14.0.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
