[in progress] AssetCategory client/server

--- a/web-server/.gitignore
+++ b/web-server/.gitignore
@@ -5,3 +5,21 @@ media/
 prisma/migrations/
 dist/
 **/.DS_Store
+
+yarn-error.log/
+vendor/
+tmp/
+.idea
+tmp-resolvers
+package-lock.json
+flow-typed
+yarn.lock
+javascript/**/migrations/
+typescript/**/migrations/
+misc/**/migrations/
+databases/**/migrations/
+experimental/**/*.db
+.next
+.vscode/
+.nuxt
+dev.db
